--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-        <head>My Lecture 0</head>
+        <head>
+            <title>My Lecture 0</title>
+        </head>
         <body>
             Hello World !
                 Hello again
